// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gradient matches dark snapshot 1`] = `
<BVLinearGradient
  angle={170}
  angleCenter={
    {
      "x": 0.75,
      "y": 0.75,
    }
  }
  colors={
    [
      4282350466,
      4287349689,
    ]
  }
  endPoint={
    {
      "x": 0.5,
      "y": 1,
    }
  }
  locations={null}
  startPoint={
    {
      "x": 0.5,
      "y": 0,
    }
  }
  useAngle={true}
>
  <Text>
    Child content
  </Text>
</BVLinearGradient>
`;

exports[`gradient matches light snapshot 1`] = `
<BVLinearGradient
  angle={145}
  angleCenter={
    {
      "x": 0.75,
      "y": 0.75,
    }
  }
  colors={
    [
      4290041024,
      4292997582,
    ]
  }
  endPoint={
    {
      "x": 0.5,
      "y": 1,
    }
  }
  locations={null}
  startPoint={
    {
      "x": 0.5,
      "y": 0,
    }
  }
  useAngle={true}
>
  <Text>
    Child content
  </Text>
</BVLinearGradient>
`;
